--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><title>תב"ע פתוחה</title><meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><link rel="stylesheet" href="/css/77e747ae.vendor.css" media="screen"><link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4/leaflet.css"><!--[if lte IE 8]><link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4/leaflet.ie.css" /><![endif]--><link rel="stylesheet" href="/css/e4e2a87b.main.css" media="screen"><link rel="alternate" type="application/atom+xml" href="http://opentaba-server.herokuapp.com/feed" title="פיד תוכניות בניה בירושלים"><script type="text/javascript">function fb_share(){
+<!DOCTYPE html><html><head><title>תב"ע פתוחה</title><meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><link rel="stylesheet" href="css/77e747ae.vendor.css" media="screen"><link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4/leaflet.css"><!--[if lte IE 8]><link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4/leaflet.ie.css" /><![endif]--><link rel="stylesheet" href="css/e4e2a87b.main.css" media="screen"><link rel="alternate" type="application/atom+xml" href="http://opentaba-server.herokuapp.com/feed" title="פיד תוכניות בניה בירושלים"><script type="text/javascript">function fb_share(){
 	      window.open(
 	          'http://www.facebook.com/sharer.php?s=100&p[url]=http://opentaba.info&p[images][0]=http://jnul.huji.ac.il/dl/maps/jer/images/jer010/Jer010_b.jpg&p[title]=תב"ע+פתוחה&p[summary]=', 
 	          'facebook_share',
@@ -25,7 +25,7 @@
 		<div class="modal-footer">
 			<button class="btn" data-dismiss="modal" aria-hidden="true">סגור</button>
 		</div>
-	</div --><script src="http://cdn.leafletjs.com/leaflet-0.4/leaflet.js"></script><script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script><script src="/scripts/fe4e4ebd.vendor.js"></script><script src="/scripts/5a63c2bc.scripts.js"></script><script type="text/javascript">var _gaq = _gaq || [];
+	</div --><script src="http://cdn.leafletjs.com/leaflet-0.4/leaflet.js"></script><script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script><script src="scripts/fe4e4ebd.vendor.js"></script><script src="scripts/5a63c2bc.scripts.js"></script><script type="text/javascript">var _gaq = _gaq || [];
 		_gaq.push(['_setAccount', 'UA-37675804-1']);
 		_gaq.push(['_trackPageview']);
 
