added handlebars script stub

--- a/app/index.html
+++ b/app/index.html
@@ -153,6 +153,7 @@
 	<script src="data/gushim.min.js"></script>
 	<script src="app.js"></script>
     <!-- endbuild -->
+    <script id="template"></script>
 	<script type="text/javascript">
 		var _gaq = _gaq || [];
 		_gaq.push(['_setAccount', 'UA-37675804-1']);
